# rerun_annotator

./: .gitmodules  CLAUDE.md  README.md  bp.rbl  demo_gradio_rerun.py  main.py  pyproject.toml
rerun_annotator/: __init__.py  app.py  lerobot.py  schema.py
rerun_export/: pyproject.toml
rerun_export/rerun_export/lerobot/: converter.py  types.py
scripts/: lerobot_export.py  run_root_gradio_rerun_demo.sh  run_rrd_segment_annotator.sh
tests/: test_edit_annotated.py  test_lerobot.py  test_schema.py  test_trim_rrd.py
